fix race condition in parallel compilation tests